fix: body overflowing in x bc of menu

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -14,6 +14,7 @@ body {
   margin: 0;
   font-family: 'Manrope', sans-serif!important;
   overflow-y: scroll;
+  overflow-x: hidden;
   scroll-behavior: smooth;
 }
 .scroll-lock {
